<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
        tools:context="com.example.fathima.tomton.MainWindow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#85A4A0"
            android:onClick="markFunction">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/markatt"
                android:contentDescription="@string/content_mark_att"
                android:src="@drawable/ic_mark_att"
                android:layout_centerInParent="true"
                android:tint="@color/secondary1"
                android:minWidth="40dp"
                android:minHeight="40dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mark_attendance"
                android:id="@+id/textView10"
                android:layout_below="@+id/markatt"
                android:layout_centerHorizontal="true"
                android:textColor="@color/secondary1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:textAlignment="center" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#6F9294"
            android:onClick="messageFunction"
            android:visibility="visible"
            android:id="@+id/rlupdate">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_update_att"
                android:id="@+id/updateatt"
                android:src="@drawable/ic_update"
                android:layout_centerInParent="true"
                android:tint="@color/secondary1"
                android:minWidth="40dp"
                android:minHeight="40dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_attendance"
                android:id="@+id/textView9"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/updateatt"
                android:textColor="@color/secondary1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:textAlignment="center" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#6F9294"
            android:onClick="messageFunction"
            android:id="@+id/rlassign">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_update_att"
                android:id="@+id/assignclass"
                android:src="@drawable/ic_update"
                android:layout_centerInParent="true"
                android:tint="@color/secondary1"
                android:minWidth="40dp"
                android:minHeight="40dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_assign_class"
                android:id="@+id/tv_assign"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/assignclass"
                android:textColor="@color/secondary1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:textAlignment="center" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#5B8085"
            android:onClick="viewFunction">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/viewatt"
                android:contentDescription="@string/content_view_att"
                android:src="@drawable/ic_view_att"
                android:layout_centerInParent="true"
                android:tint="@color/secondary1"
                android:minWidth="40dp"
                android:minHeight="40dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_attendance"
                android:id="@+id/textView11"
                android:layout_below="@+id/viewatt"
                android:layout_centerHorizontal="true"
                android:textColor="@color/secondary1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:textAlignment="center" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#486E76"
            android:onClick="indiFunction">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_indi_pro"
                android:id="@+id/indipro"
                android:src="@drawable/ic_individual_progress"
                android:layout_centerInParent="true"
                android:tint="@color/secondary1"
                android:minWidth="40dp"
                android:minHeight="40dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/individual_data"
                android:id="@+id/textView12"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/indipro"
                android:textColor="@color/secondary1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:textAlignment="center" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#3B616B"
            android:onClick="messageFunction">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/message"
                android:contentDescription="@string/content_message"
                android:src="@drawable/ic_messages"
                android:layout_centerInParent="true"
                android:tint="@color/secondary1"
                android:minWidth="40dp"
                android:minHeight="40dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:id="@+id/textView13"
                android:layout_below="@+id/message"
                android:layout_centerHorizontal="true"
                android:textColor="@color/secondary1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:textAlignment="center" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#2D515E"
            android:onClick="passwordFunction">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_change_pass"
                android:id="@+id/changepass"
                android:src="@drawable/ic_change_pass"
                android:layout_centerInParent="true"
                android:tint="@color/secondary1"
                android:minWidth="40dp"
                android:minHeight="40dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/textView14"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/changepass"
                android:textColor="@color/secondary1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:textAlignment="center" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#284A5D"
            android:onClick="logoutFunction">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logout"
                android:contentDescription="@string/content_logout"
                android:src="@drawable/ic_logout"
                android:layout_centerInParent="true"
                android:tint="@color/secondary1"
                android:minWidth="40dp"
                android:minHeight="40dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:id="@+id/textView15"
                android:layout_below="@+id/logout"
                android:layout_centerHorizontal="true"
                android:textColor="@color/secondary1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="5dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorcontact"
            android:onClick="contactFunction">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contact"
                android:contentDescription="@string/content_logout"
                android:src="@drawable/ic_contact"
                android:layout_centerInParent="true"
                android:tint="@color/secondary1"
                android:minWidth="40dp"
                android:minHeight="40dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_contact"
                android:id="@+id/tv_contact"
                android:layout_below="@+id/contact"
                android:layout_centerHorizontal="true"
                android:textColor="@color/secondary1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="5dp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
