<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fathima.tomton.IndividualPro">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_subject"
            android:minHeight="40dp"
            android:background="@color/colorPrimary"
            android:layout_weight="2"
            android:layout_gravity="center_vertical" />
        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/radiogroup"
            android:layout_weight="1"
            android:paddingStart="10dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Division A"
                android:id="@+id/radioButton"
                android:checked="true"
                app:buttonTint="@color/colorPrimary" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Division B"
                android:id="@+id/radioButton2"
                android:checked="false"
                app:buttonTint="@color/colorPrimary" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/linearLayout2">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/et_name"
            android:layout_weight="2"
            android:hint="Enter Name"
            android:inputType="textPersonName"
            android:textColor="@color/secondary2" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="View"
            android:id="@+id/btn_view"
            android:layout_weight="1"
            android:background="@color/secondary3"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:id="@+id/linear"
        android:layout_marginTop="10dp"
        android:background="@color/rowtwo">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_date"
            android:id="@+id/name"
            android:layout_weight="1"
            android:textColor="@color/secondary1"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_period"
            android:id="@+id/roll"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/secondary1"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textView_status"
            android:id="@+id/stat"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/secondary1"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

    </LinearLayout>
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lv_individual"
        android:layout_below="@+id/linear"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/tv_error"
        android:layout_below="@+id/lv_individual"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#f00"
        android:layout_marginTop="20dp" />
</RelativeLayout>
